k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqctrl-service
  namespace: sqfaas
spec:
  selector:
    app: sqctrl
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: jmx
      port: 9010
      protocol: TCP
      targetPort: 9010
    - name: monitoring
      port: 9090
      protocol: TCP
      targetPort: 9090
  type: ClusterIP  # Tipo ClusterIP, já que o LoadBalancer será gerenciado pelo Ingress Controller
  sessionAffinity: None
