k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sqctrl-ingress
  namespace: sqfaas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"  
    nginx.ingress.kubernetes.io/ingress.class: nginx-private  
spec:
  rules:
    - host: sqctrl.sqfaas.dev  
      http:
        paths:
          - path: /frontend  
            pathType: Prefix  
            backend:
              service:
                name: sqctrl-service
                port:
                  name: http
